--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,10 +42,10 @@ jobs:
           
       - name: "Draft a release"
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           draft: false
           fail_on_unmatched_files: true
+          tag_name: "0.1.0"
           files: |
             readme.md
         env:
